Remove unused config